loadBalance.yaml
apiVersion: v1
kind: Service
metadata:
  name: meu-site-loadbalancer
  namespace: meu-site-namespace
spec:
  type: LoadBalancer
  externalIPs:
    - seu-ip-externo 
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  selector:
    app: meu-site
